--- a/happilyever/public/index.html
+++ b/happilyever/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript">  
+    </script>
     <meta
       name="description"
       content="Web site created using create-react-app"
